<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/HOMEPAGEDOC"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/homepage" />

        <item
            android:id="@+id/CALENDARDOC"
            android:icon="@drawable/ic_baseline_calendar_month_24"
            android:title="@string/calendario" />

        <item
            android:id="@+id/PRESENCEDOC"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/absence" />

        <item
            android:id="@+id/PROFILEDOC"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/elenco_docenti" />

        <item
            android:id="@+id/VOTEDOC"
            android:icon="@drawable/ic_baseline_format_list_numbered_24"
            android:title="@string/voti" />

        <item
            android:id="@+id/LOGOUTDOC"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/logout" />

    </group>

    <item
        android:id="@+id/IMPOSTAZIONI"
        android:title="Impostazioni">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/PERSONAL_PROFILEDOC"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/profilo_personale" />
            </group>
        </menu>
    </item>

</menu>